--- a/MobileApp/DigiFamily/DigiFamily/AppShellLogin.xaml
+++ b/MobileApp/DigiFamily/DigiFamily/AppShellLogin.xaml
@@ -118,12 +118,12 @@
                 <BoxView Style="{StaticResource Separator}"/>
                 <StackLayout Orientation="Horizontal" Padding="5,0,5,5">
                     <Label Text="Sample "
-                       TextColor="GhostWhite"
-                       FontAttributes="Bold"
-                       HorizontalOptions="Center" />
+                           Style="{StaticResource TextColorStyle}"
+                           FontAttributes="Bold"
+                           HorizontalOptions="Center" />
                     <Label Text=" v1.0"
-                       TextColor="GhostWhite"
-                       HorizontalOptions="Center" />
+                           Style="{StaticResource TextColorStyle}"
+                           HorizontalOptions="Center" />
                 </StackLayout>
             </StackLayout>
         </DataTemplate>
