--- a/MobileApp/DigiFamily/DigiFamily/Views/Common/MenuHeaderView.xaml
+++ b/MobileApp/DigiFamily/DigiFamily/Views/Common/MenuHeaderView.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:imageControl="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:imageControl="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
              x:Class="DigiFamily.Views.Common.MenuHeaderView">
   <ContentView.Content>
         <StackLayout Spacing="0">
