--- a/MobileApp/DigiFamily/DigiFamily/Views/UserDetailsPage.xaml
+++ b/MobileApp/DigiFamily/DigiFamily/Views/UserDetailsPage.xaml
@@ -635,7 +635,7 @@
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
-                        <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition />
